comitted  SOAP proj

--- a/My restful/REST-1-CRUDEndpoints-Caching-Filters/pom.xml
+++ b/My restful/REST-1-CRUDEndpoints-Caching-Filters/pom.xml
@@ -53,6 +53,18 @@ default user name is user, default pass will be printed on console -->
 	</dependencies>
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>maven-tomcat-war-deployment-server</server> <!-- as defined in your settings.xml -->
+					<path>/yourApp</path>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
